--- a/package.json
+++ b/package.json
@@ -41,5 +41,18 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iamluqmaan/spotify-clone.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/iamluqmaan/spotify-clone/issues"
+  },
+  "homepage": "https://github.com/iamluqmaan/spotify-clone#readme"
 }
